--- a/src/app/pages/template/template.component.html
+++ b/src/app/pages/template/template.component.html
@@ -1,7 +1,6 @@
-
 <h4>Formularios <small> Template </small></h4>
 <hr>
-<form autocomplete="off">
+<form autocomplete="off" (ngSubmit)="guardar(forma)" #forma="ngForm">
 
   <div>
 
@@ -11,18 +10,39 @@
 
         <input class="form-control"
                type="text"
-               placeholder="Nombre">
+               name="nombre"
+               required
+               minlength="5"
+               placeholder="Nombre"
+               #nombre="ngModel"
+               [class.is-invalid]="nombre.invalid && nombre.touched"
+               [ngModel]="usuario.nombre"
+        >
+        <small *ngIf="nombre.invalid && nombre.touched"
+               class="form-text text-danger">Ingrese al menos 5 letras</small>
       </div>
     </div>
 
     <div class="form-group row">
+
       <label class="col-2 col-form-label">Apellido</label>
       <div class="col-8">
-
         <input class="form-control"
                type="text"
-               placeholder="Apellido">
+               name="apellido"
+               minlength="5"
+               placeholder="Apellido"
+               ngModel
+               required
+               #apellido="ngModel"
+               [ngModel]="usuario.apellido"
+               [class.is-invalid]="apellido.invalid && apellido.touched"
+        >
+        <small *ngIf="apellido.invalid && apellido.touched"
+               class="form-text text-danger">Ingrese al menos 5 letras</small>
       </div>
+
+
     </div>
 
   </div>
@@ -33,16 +53,26 @@
 
       <input class="form-control"
              type="email"
-             placeholder="Correo electrÃ³nico">
+             name="correo"
+             required
+             placeholder="Correo electróico"
+             pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$"
+             ngModel
+             #correo="ngModel"
+             [ngModel]="usuario.email"
+             [class.is-invalid]="correo.invalid && correo.touched"
+      >
+      <small *ngIf="correo.invalid && correo.touched"
+             class="form-text text-danger">Ingrese correo electrónico</small>
     </div>
   </div>
-
 
 
   <div class="form-group row">
     <label class="col-2 col-form-label">&nbsp;</label>
     <div class="input-group col-md-8">
-      <button type="submit" class="btn btn-outline-primary btn-block">
+      <button type="submit"
+              class="btn btn-outline-primary btn-block">
         Guardar
       </button>
     </div>
