--- a/src/app/pages/template/template.component.html
+++ b/src/app/pages/template/template.component.html
@@ -67,7 +67,56 @@
     </div>
   </div>
 
+  <div class="form-group row">
+    <label class="col-2 col-form-label">Pais</label>
+    <div class="col-8">
+      <select class="form-control"
+              name="pais"
+              [disabled]="paises.length===0"
+              [ngModel]="usuario.pais"
+              #pais="ngModel"
+              [class.is-invalid]="pais.invalid && pais.touched"
+              required>
+        <option *ngFor="let pais of paises"
+                [value]="pais.codigo">
+          {{pais.nombre}}
+        </option>
+      </select>
+      <small *ngIf="pais.invalid && pais.touched"
+             class="form-text text-danger">Seleccione un pais</small>
+    </div>
+  </div>
 
+  <div class="form-group row">
+    <label class="col-2 col-form-label">Genero</label>
+    <div class="col-8">
+      <div class="form-check form-check-inline">
+
+        <input type="radio" class="form-check-input"
+               name="genero"
+               value="M"
+               [class.is-invalid]="genero.invalid && genero.touched"
+               required
+               [ngModel]="usuario.genero"
+               #genero="ngModel"
+        >
+        <label class="form-check-label">Masculino</label>
+      </div>
+      <div class="form-check form-check-inline">
+
+        <input type="radio" class="form-check-input"
+               name="genero"
+               value="F"
+               [class.is-invalid]="genero.invalid && genero.touched"
+               required
+               [ngModel]="usuario.genero"
+               #genero="ngModel"
+        >
+        <label class="form-check-label">Femenino</label>
+      </div>
+    </div>
+
+  </div>
   <div class="form-group row">
     <label class="col-2 col-form-label">&nbsp;</label>
     <div class="input-group col-md-8">
