--- a/src/app/pages/reactive/reactive.component.html
+++ b/src/app/pages/reactive/reactive.component.html
@@ -1,49 +1,80 @@
-
 <h4>Formularios <small> Reactivos </small></h4>
 <hr>
 
-<form autocomplete="off" [formGroup]="forma" (ngSubmit)="guardarForma()" >
-
-
-    <div class="form-group row">
-      <label class="col-2 col-form-label">Nombre</label>
-      <div class="col-8">
-
-        <input class="form-control"
-               type="text"
-               placeholder="Nombre"
-               id="nombre"
-               formControlName="nombre">
-      </div>
-    </div>
-
-    <div class="form-group row">
-      <label class="col-2 col-form-label">Apellido</label>
-      <div class="col-8">
-
-        <input class="form-control"
-               type="text"
-               formControlName="apellido"
-               placeholder="Apellido">
-      </div>
-    </div>
-
+<form autocomplete="off" [formGroup]="forma" (ngSubmit)="guardarForma()">
 
 
   <div class="form-group row">
-    <label class="col-2 col-form-label">Correo</label>
-    <div class="col-8">
-
+    <label class="col-2 col-form-label">Nombre</label>
+    <div class="col">
       <input class="form-control"
-             type="email"
-             formControlName="correo"
-             placeholder="Correo electrónico">
+             type="text"
+             placeholder="Nombre"
+             id="nombre"
+             formControlName="nombre"
+             [class.is-invalid]="nombreNoValido"
+      >
+      <small *ngIf="nombreNoValido"
+             class="form-text text-danger">Ingrese al menos 5 letras</small>
     </div>
   </div>
 
   <div class="form-group row">
+    <label class="col-2 col-form-label">Apellido</label>
+    <div class="col">
+
+      <input class="form-control"
+             type="text"
+             formControlName="apellido"
+             placeholder="Apellido"
+             [class.is-invalid]="apellidoNoValido"
+      >
+      <small *ngIf="apellidoNoValido"
+             class="form-text text-danger">Ingrese al menos 5 letras</small>
+    </div>
+  </div>
+
+
+  <div class="form-group row">
+    <label class="col-2 col-form-label">Correo</label>
+    <div class="col">
+
+      <input class="form-control"
+             type="email"
+             formControlName="correo"
+             placeholder="Correo electrónico"
+             [class.is-invalid]="correoNoValido"
+      >
+      <small *ngIf="correoNoValido"
+             class="form-text text-danger">Ingrese correo electrónico valido</small>
+    </div>
+  </div>
+
+
+  <div class="form-group row" formGroupName="direccion">
+    <label class="col-2 col-form-label">Nombre</label>
+    <div class="form-row col">
+      <div class="col">
+        <input type="text"
+               class="form-control"
+               placeholder="Distrito"
+               formControlName="distrito"
+               [class.is-invalid]="distritoNoValido">
+      </div>
+      <div class="col">
+        <input type="text"
+               class="form-control"
+               placeholder="Ciudad"
+               formControlName="ciudad"
+               [class.is-invalid]="ciudadNoValida">
+      </div>
+    </div>
+  </div>
+
+
+  <div class="form-group row">
     <label class="col-2 col-form-label">&nbsp;</label>
-    <div class="input-group col-md-8">
+    <div class="input-group ">
       <button type="submit" class="btn btn-outline-primary btn-block">
         Guardar
       </button>
