--- a/src/app/pages/reactive/reactive.component.html
+++ b/src/app/pages/reactive/reactive.component.html
@@ -73,6 +73,45 @@
 
 
   <div class="form-group row">
+    <div class="col">
+
+      <table class="table">
+        <thead class="thead-dark">
+        <tr>
+          <th>ID</th>
+          <th>Pasatiempo</th>
+          <th>Borrar</th>
+        </tr>
+        </thead>
+        <tbody formArrayName="pasatiempos">
+        <tr *ngFor="let control of pasatiempos.controls; let i = index">
+          <td>{{ i + 1 }}</td>
+          <td>
+            <input
+                   [formControlName]="i"
+                   class="form-control"
+                   type="text"
+                   type="button"
+            >
+          </td>
+          <td>
+            <button class="btn btn-danger"
+                    (click)="borrarPasatiempo(i)" >Borrar
+            </button>
+          </td>
+        </tr>
+        </tbody>
+      </table>
+
+
+      <button class="btn btn-primary mt-3 mb-5 btn-block"
+              type="button"
+              (click)="agregarPasatiempo()" >+Agregar
+      </button>
+    </div>
+  </div>
+
+  <div class="form-group row">
     <label class="col-2 col-form-label">&nbsp;</label>
     <div class="input-group ">
       <button type="submit" class="btn btn-outline-primary btn-block">
