--- a/src/app/pages/reactive/reactive.component.html
+++ b/src/app/pages/reactive/reactive.component.html
@@ -51,6 +51,22 @@
   </div>
 
   <div class="form-group row">
+    <label class="col-2 col-form-label">Usuario</label>
+    <div class="col">
+
+      <input class="form-control"
+             type="text"
+             formControlName="usuario"
+             placeholder="Nombre de usuario"
+             [class.is-invalid]="usuarioNoValido"
+      >
+      <small *ngIf="usuarioNoValido"
+             class="form-text text-danger">El usuario ya existe</small>
+    </div>
+  </div>
+
+
+  <div class="form-group row">
     <label class="col-2 col-form-label">Contraseña</label>
     <div class="col">
 
@@ -151,11 +167,8 @@
   </div>
 
 </form>
-<hr>
 <pre>
   <b>Estado de formulario:</b> {{forma.valid}}
-  <br>
   <b>Status:</b>  {{forma.status}}
-  <br>
   {{forma.value|json}}
 </pre>
